# webshop

./: ,gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
cart/: models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
orders/: forms.py  models.py  urls.py  views-error.py  views.py
orders/migrations/: 0001_initial.py  0002_rename_product_orderitem_tovar.py  0003_remove_shippingaddress_order_orders_address_and_more.py  0004_rename_phone_number_orders_phone.py  0005_orderitem.py  0006_remove_orders_price_remove_orders_quantity_and_more.py
shop/: forms.py  mixins.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_shop_time_update.py  0003_rename_shop_category.py
templates/: base.html  footer.html  form.html
templates/cart/: cart_detail.html
templates/orders/: order_create.html  order_detail.html  order_list.html
templates/shop/: about.html  index.html
templates/tovars/: tovars_detail.html  tovars_list.html
templates/users/: users_detail.html
tovars/: forms.py  models.py  urls.py  views.py
tovars/migrations/: 0001_initial.py
users/: forms.py  mixins.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_address_user_phone.py
webshop/: mixins.py  settings.py  urls.py
