[tool.poetry]
name = "webshop"
version = "0.1.0"
description = "firstwebshop"
authors = ["Eugene Anisimov <zero0061@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-bootstrap5 = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
